# kafka_course

./: pyproject.toml  settings.py
kafka/: consumer.py  consumer_cooperative.py  kowl-compose.yml  producer.py  producer_callback.py  producer_keys.py
kafka-connect/: connect-standalone.properties  elasticsearch.properties
opensearch/: consumer.py
wikimedia/: docker-compose.yml  producer.py
